--- a/pages/seam-hackathon.html
+++ b/pages/seam-hackathon.html
@@ -28,7 +28,7 @@
         </ul>
     </div>
 
-    <h1>how i made journal app in 12 hours></h1>
+    <h1>how i made journal app in 12 hours?</h1>
     <h3>it was last august and i wanted to do seam mini-app hackathon</h3>
     <img src="">
     <p>
