setup html, css and script in blog pages

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             <p>
                 I made it for a hackathon to make a mini game that allows users to add their drawings and emojis to show their highlight of their day. 
             </p>
-            <button class="read-more">Read More</button>
+            <form action="pages/seam-hackathon.html">
+                <button type="click" class="read-more" >Read More</button>
+            </form>
         </div>
     </div>
 
@@ -65,7 +67,9 @@
             </ul>
             <img src="img/projects/shades.png" alt="Shades: News App" width="30%" height="auto">
             <p>I did it for my 12 week long internship to analyse app’s performance and features and write all my findings to share it with my supervisors.</p>
-            <button class="read-more">Read More</button>
+            <form action="pages/shades-ux-studies.html">
+                <button type="click" class="read-more">Read More</button>
+            </form>
         </div>
     </div>
 
@@ -85,7 +89,9 @@
             <p>
                 I had freelanced for a startup in India to redesign their brand identity to make it match it more with their current line of work. As a result, I had come up with new colors, fonts and logos.
             </p>
-            <button class="read-more">Read More</button>
+            <form action="pages/content-tattva.html">
+                <button type="click" class="read-more">Read More</button>
+            </form>
         </div>
     </div>
 
