--- a/pages/content-tattva.html
+++ b/pages/content-tattva.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Liter&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How I Made Journal Miniapp in 12 hours?</title>
+    <title>contenttattva</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
-    
+    <header> 
+        <img src="../icon/vd-icon.png" alt="logo" width="50px" height="50px">
+        <h3>my portfolio</h3>
+    </header>
+
+    <div id="nav">
+        <ul>
+            <li><a href="../index.html">home</a></li>
+            <li><a href="works.html">projects</a></li>
+            <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing" target="_blank">resume</a></li>
+            <li><a href="https://github.com/vaibhavyxx">github</a></li>
+            <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linked in</a></li>
+            <li><a href="mailto:vd5443@rit.edy">mail</a></li>
+        </ul>
+    </div>
+
+    <article id="story">
+        <h1>how i freelanced as a ui/ux desiger last summer?</h1>
+        <h3>need to write content</h3>
+        <img src="">
+        
+
+        <div id="socials">
+            <p>Feel free to check out my figma  here :&#41</p>
+            <a href="https://www.figma.com/design/iTzMg2fyMVJQA4gXT2CITJ/Content-tattva-v2?t=3yeB14o3nz79nlaH-1"><img src="../img/social media/figma.png" alt="github" width="8%" height="auto"></a>
+        </div>
+    </article>
+
+    <footer>
+        Made with love, <a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/social media/linked in.png" alt="linkedin" width="50px" height="auto"></a>,
+        <a href="https://github.com/vaibhavyxx"><img src="img/social media/github.png" alt="github" width="50px" height="auto"></a>
+    </footer>
 </body>
+<script src="../src/main.js"></script>
 </html>
