--- a/pages/seam-hackathon.html
+++ b/pages/seam-hackathon.html
@@ -28,33 +28,35 @@
         </ul>
     </div>
 
-    <h1>how i made journal app in 12 hours?</h1>
-    <h3>it was last august and i wanted to do seam mini-app hackathon</h3>
-    <img src="">
-    <p>
+    <article id="story">
+        <h1>how i made journal app in 12 hours?</h1>
+        <h3>it was last august and i wanted to do seam mini-app hackathon</h3>
+        <img src="">
+        <p>
         I have always loved hackathons, as they force me to get things done. However, I didn’t think I would be able to finish this hackathon as I didn’t know how to code in TypeScript or React. 
         Granted, I had coded in Javascript and that was all you needed to learn typescript and react quickly.
-    </p>
-    <p>
+        </p>
+        <p>
         Of course, after putting off this hackathon for the past four days, today was the due date, and I decided to get started. For the first hour, I watched some YouTube tutorials to learn how to code in React and TypeScript. After learning a bit of the basics, I looked up Seam’s repository to see what else I needed to get started.
-    </p>
-    <p>
+        </p>
+        <p>
         It told me to download yarn as I have Windows, so I went to git bash and downloaded yarn. Once, I had that, I played around with the app and saw what other games people have made, I started working on mine. Granted, all of that pre-work took me 4 hours and I had 8 hours left to finish the competition.
-    </p>
-    <p>
+        </p>
+        <p>
         Initially, I had big plans as I wanted to make something ‘memorable’ but after understanding my skill sets, I had to scope down and make something that was easy to finish but looked polished enough. So, what started as a drawing app idea ended up being a journaling idea as I wanted users to make silly drawings to show the highlight of their day. Of course, I also wanted ‘stickers’ which are scaled-up emojis.
-    </p>
-    <p>
+        </p>
+        <p>
         After hitting numerous roadblocks of why my code wasn't working and wanting to give up, I eventually figured it out. I stack overflow my problems or just asked my family and friends if they could help me out with my bug. One way or the other, but by the eleventh hour, I was done and ready to submit it to the competition.
-    </p>
-    <p>
+        </p>
+        <p>
         Flash forward, a few weeks later, I ended up being a finalist for the hackathon and my code got published into the app which is now available on Google Play Store and App Store. Though I did not win the contest it was my first solo-hack that I had actually finished and I felt accomplished.
-    </p>
+        </p>
 
-    <div id="socials">
-        <p>Feel free to check out my github here :&#41</p>
-        <a href="https://github.com/vaibhavyxx/Journal"><img src="../img/social media/github-black.png" alt="github" width="8%" height="auto"></a>
-    </div>
+        <div id="socials">
+            <p>Feel free to check out my github here :&#41</p>
+            <a href="https://github.com/vaibhavyxx/Journal"><img src="../img/social media/github-black.png" alt="github" width="8%" height="auto"></a>
+        </div>
+    </article>
 
     <footer>
         Made with love, <a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/social media/linked in.png" alt="linkedin" width="50px" height="auto"></a>,
