--- a/pages/shades-ux-studies.html
+++ b/pages/shades-ux-studies.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Liter&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>shades ux internship</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
-    
+    <!--more content on the types of questions you asked
+    how did you approach people to do your survey
+    success rate with the reward system
+    what did you accomplish at the end?
+    maps, any evidence that you had used during this process
+    -->
+    <header> 
+        <img src="../icon/vd-icon.png" alt="logo" width="50px" height="50px">
+        <h3>my portfolio</h3>
+    </header>
+
+    <div id="nav">
+        <ul>
+            <li><a href="../index.html">home</a></li>
+            <li><a href="works.html">projects</a></li>
+            <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing" target="_blank">resume</a></li>
+            <li><a href="https://github.com/vaibhavyxx">github</a></li>
+            <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linked in</a></li>
+            <li><a href="mailto:vd5443@rit.edy">mail</a></li>
+        </ul>
+    </div>
+
+    <article id="story">
+        <h1>how i documented my 12 week long ux research for my internship?</h1>
+        <h3>last fall (2024), i got a remote ux internship at shades and this is my journey <3</h3>
+        <img src="../img/projects/shades.png" width="auto" height="100px">
+        <p>On the second day of class, I got an email saying that I got the UX internship. I was super thrilled and did not know what I was going to embark on. While I have worked on UX in my classes where we built hi-fi prototypes for a student course enrolment portal but I was scared.</p>
+        <p>One of the job requirements was to approach strangers and ask them to play with the company’s app. Initially, I would ask my friends and family to fill out my surveys and share their thoughts but eventually, I started asking strangers to do the same. One thing I realized is that making people fill out a form is a lot harder than it looks as people feel lazy so I decided to give out stickers as an incentive to do the form.</p>
+        <p>The strategy was quite a success as I interviewed 50+ people and reinterviewed a couple of them to share their thoughts about the app’s changes. Of course, I would interview them in person, send out a Google form, or do a focus group to know their thoughts on the app. I liked spicing things up and getting my data through various means. </p>
+        <p>This internship taught me how to be open to rejection and just giving a shot. It taught me how to talk to people to interview them bias-free. While my questions were directed more towards the gamification of the app, I was happy to see the changes it made.</p>
+        <p>Earlier, games were locked through streaks but now you earn your XPs through them. It also raised awareness about the AI art and content in the app and how to make them subtle.</p>
+        
+        <div id="socials">
+            <p>Feel free to check out my presentation here :&#41</p>
+            <a href="https://www.canva.com/design/DAGXNVFNpZA/UVAFhPpnE23Tw0TBMW1DQg/edit?utm_content=DAGXNVFNpZA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"><img src="../img/social media/canva.png" width="10%" height="auto"></a>
+        </div>
+    </article>
+
+    <footer>
+        Made with love, <a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/social media/linked in.png" alt="linkedin" width="50px" height="auto"></a>,
+        <a href="https://github.com/vaibhavyxx"><img src="img/social media/github.png" alt="github" width="50px" height="auto"></a>
+    </footer>
+
 </body>
+<script src="../src/main.js"></script>
 </html>
