no scroll does not work, but finished ct's blog

--- a/pages/content-tattva.html
+++ b/pages/content-tattva.html
@@ -112,11 +112,45 @@
 
         <h3>Design</h3>
         <!--connect to figma-->
-        <p>Something I made for fun-- this logo :)</p>
-        <div id="socials">
-            <p>Feel free to check out my figma  here :&#41</p>
-            <a href="https://www.figma.com/design/iTzMg2fyMVJQA4gXT2CITJ/Content-tattva-v2?t=3yeB14o3nz79nlaH-1"><img src="../img/social media/figma.png" alt="github" width="8%" height="auto"></a>
-        </div>
+        <p>Something I made for fun- this logo :)</p>
+        <img src="../img/projects/content-tattva/logo.png" alt="letters c and t combined to make a happy face" width="50%" height="auto">
+        <p>In the inital design, I imagined it to be black but after settling our color scheme, we decided to change the logo's color to LinkedIn blue.</p>
+        
+        <h4>Color Scheme</h4>
+        <p>Based on our design pillars, I wanted to have blue to reflect trust and peace values of the firm, green was to reflect growth and how their services can help your company grow, black and white to show modernity.</p>
+        <img src="../img/projects/content-tattva/ct1.png" alt="Shades of blue, black and grayish white" width="50%">
+        <img src="../img/projects/content-tattva/ct2.png" alt="Shades of black, gray and green" width="50%" height="auto">
+        <img src="../img/projects/content-tattva/ct3.png" alt="" width="50%" height="auto">
+        <img src="../img/projects/content-tattva/ct4.png" alt="" width="50%" height="auto">
+        <p>Ultimately, we settled on the first one as it reflected our values of customer satisfaction, growth and peace.</p>
+
+        <h3>Prototyping</h3>
+        <p>For prototypes, I had made the file in Figma to see how it could reflect in real time.</p>
+        <img src="">
+        <a href="https://www.figma.com/design/iTzMg2fyMVJQA4gXT2CITJ/Content-tattva-v2?t=3yeB14o3nz79nlaH-1"><img src="../img/social media/figma.png" alt="github" width="8%" height="auto"></a>
+
+        <h3>Testing</h3>
+        <p>
+            I had gone through multiple rounds of testing with the founders to understand how to make changes in the websites. Some of the suggestions that they had mentioned:
+            <ul>
+                <li>Add more images</li>
+                <li>Change the font to make it look more technical</li>
+                <li>Make it more colorful</li>
+                <li>Add more information about services</li>
+            </ul>
+        </p>
+
+        <h3>Outcomes</h3>
+        <p>Overall, the client was satisfied with my work and wanted to hire a Wordpress developer to convert the file into their actual project. So, I had worked with a developer to make sure it matches the website aesthetics and the newer content is added. I had learned a lot through this process as some of my key takeaways were:</p>
+        <ul>
+            <li>Be direct and let the client know about your deadlines to make sure that you both are on the same page.</li>
+            <li>Know about your skills and be transparent with your client as you both want to make your project better.</li>
+            <li>Be flexible as freelancing is a lot about picking up new hats as I had to write content, design elements and more. </li>
+            <li>Have fun as design is all about experimenting and trying out new ideas.</li>
+            <li>Sometimes, your client would not know what they want and you have to do the detective work to figure it out, so having a few examples of what you are planning on doing before you start can help a lot.</li>
+            <li>Always have a backup, you never know if anything goes wrong.</li>
+            <li>Don’t assume that your client knows what you are talking about. For example, when I worked with them, I would show them the prototypes on Figma and they would be confused with what Figma does. Take your time to explain to them how it works.</li>
+        </ul>
     </article>
 
     <footer>
