--- a/pages/shades-ux-studies.html
+++ b/pages/shades-ux-studies.html
@@ -33,15 +33,59 @@
     </div>
 
     <article id="story">
-        <h1>how i documented my 12 week long ux research for my internship?</h1>
+        <h1>how i documented my UX research for my internship?</h1>
         <h3>last fall (2024), i got a remote ux internship at shades and this is my journey <3</h3>
         <img src="../img/projects/shades.png" width="auto" height="100px">
-        <p>On the second day of class, I got an email saying that I got the UX internship. I was super thrilled and did not know what I was going to embark on. While I have worked on UX in my classes where we built hi-fi prototypes for a student course enrolment portal but I was scared.</p>
-        <p>One of the job requirements was to approach strangers and ask them to play with the company’s app. Initially, I would ask my friends and family to fill out my surveys and share their thoughts but eventually, I started asking strangers to do the same. One thing I realized is that making people fill out a form is a lot harder than it looks as people feel lazy so I decided to give out stickers as an incentive to do the form.</p>
-        <p>The strategy was quite a success as I interviewed 50+ people and reinterviewed a couple of them to share their thoughts about the app’s changes. Of course, I would interview them in person, send out a Google form, or do a focus group to know their thoughts on the app. I liked spicing things up and getting my data through various means. </p>
-        <p>This internship taught me how to be open to rejection and just giving a shot. It taught me how to talk to people to interview them bias-free. While my questions were directed more towards the gamification of the app, I was happy to see the changes it made.</p>
-        <p>Earlier, games were locked through streaks but now you earn your XPs through them. It also raised awareness about the AI art and content in the app and how to make them subtle.</p>
-        
+        <p>Shades News is social media/news app with an aim to make GenZ audience more aware about their source of information for news. According to my research, over 80% of my target audience (GenZ particularly) prefer social media as a means to get their news. However, it is easy to spread misinformation through apps like Tik Tok, Instagram, YouTube, etc. and they wanted to make young adults more aware about their news.</p>
+        <p>
+            Through these 12 weeks, I had conducted 50+ user reviews with following goals in mind:
+            <ul>
+                <li>App’s branding: Do you like the app’s personality for fonts, colors and animations?</li>
+                <li>Content: How did they feel about the news? Do they like the variety or is there something particular they would have liked to know?</li>
+                <li>Reusability: How likely are they to use the app again? And, what pushes them in that direction?</li>
+                <li>Gamification: What did they feel about the game? Was there anything that stood out to them?</li>
+                <li>Streaks: How did they feel about having streaks? Did they have any thoughts when using the prototype version of streaks?</li>
+            </ul>
+        </p>
+
+        <h2>Methods</h2>
+        <p>During my first week of internship, I had to prepare a questionnaire and how would I get my user testers. Following is an excerpt of how I would get my testers for the app:</p>
+        <ol>
+            <li>Reach out to students in my classes and clubs (e.g., Political Science, Journalism) to gauge interest in news apps and ask them to try Shades.</li>
+            <li>Speak with professors about visiting relevant club meetings (e.g., Criminal Justice Club, Model UN) to promote Shades and encourage members to complete a survey.</li>
+            <li>Engage with friends’ mutual connections and people I meet in shared spaces (e.g., dining halls, study lounges) by discussing how Shades makes consuming news easier for Gen Z.</li>
+            <li>Put up flyers on bulletin boards and around campus featuring a QR code linked to the app and survey for easy access.</li>
+            <li>Post polls or short stories on my social media platforms (Instagram, Twitter) to identify those interested in trying out new news apps.</li>
+            <li>Join and attend clubs like Model UN to build relationships with like-minded students who may be interested in a new way to consume news.</li>
+            <li>Use email to send out personalized messages about Shades, potentially offering an incentive for survey completion (e.g., a raffle for gift cards or a small prize).</li>
+            <li>Track progress and insights using Excel to stay organized and ensure a consistent outreach approach.</li>
+        </ol>
+
+        <p>However, over the course of semester, these were my following tactics:
+        <ul>
+            <li>Quantitative research: For this technique, I had made an excel sheet for all my responses from google forms where I asked my testers:
+                <ul>
+                    <li>Rank the app’s performance and intuitiveness on a scale of 1-5?</li>
+                    <li>How likely are they to reuse the app on a scale of 1-5?</li>
+                    <li> What mediums do they prefer for news? (newsletters/websites/news apps/social media)</li>
+                </ul>
+            </li>
+
+            <li>
+                Qualitative research: Most of my qualitative work happened through user-interviews and focus groups.
+                <ul>
+                    <li>I had a set of questionnaires from my first week that evolved as I interviewed more people to get their bias free opinions.</li>
+                    <li>Experimented with focus groups as I would let a group of friends try out the app to see what their thoughts are.</li>
+                </ul>
+            </li>
+
+            <li>Behavioural research: A lot of my interviews were recorded to allow me to make notes later, this allowed me to pick up cues like “ah”, “oh, that’s cool”, etc. that I would have missed if I took notes in real time. 
+                <br>However, later I realized that having a screen recording would probably be the best. It allowed me to see at what moments my user was reacting to the app as I didn’t have to guess those moments.
+                </li>
+
+        </ul>
+        </p>
+
         <div id="socials">
             <p>Feel free to check out my presentation here :&#41</p>
             <a href="https://www.canva.com/design/DAGXNVFNpZA/UVAFhPpnE23Tw0TBMW1DQg/edit?utm_content=DAGXNVFNpZA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"><img src="../img/social media/canva.png" width="10%" height="auto"></a>
