--- a/pages/content-tattva.html
+++ b/pages/content-tattva.html
@@ -29,7 +29,7 @@
     <article id="story">
         <h1>how i redesigned contenttattva’s website?</h1>
         <h3>it was summer of 2024, and i wanted learn how to make the company’s new brand identity        </h3>
-        <img src="">
+        <img src="../img/projects/content-tattva/mockup.png" width="80%" height="auto">
         
         <p>Last summer, I was bored and I wanted to learn Figma better. In my spring semester (of 2024), I had worked with a few classmates to make a UI/UX project for a student portal. While we used Axure RP and focused on a lot of design principles, I wanted to challenge myself.</p>
         <p>Hence, over the summer, I spent a few weeks learning how to use Figma properly and effectively by learning about global variables, components, and having a brand identity. After making a few projects to understand my fundamentals, I wanted to try out freelancing. Through connections, I knew a startup with an outdated website and wanted to offer them my services.</p>
@@ -83,7 +83,7 @@
         </p>
 
         <h3>sitemap</h3>
-        <img src="../img/projects/content-tattva/Flowchart.jpg" width="50%" height="auto">
+        <img src="../img/projects/content-tattva/Flochart.png" width="50%" height="auto">
 
         <h3>wireframes</h3>
         <img src="../img/projects/content-tattva/wireframe.png" width="50%" height="auto">
