--- a/pages/shades-ux-studies.html
+++ b/pages/shades-ux-studies.html
@@ -86,6 +86,14 @@
         </ul>
         </p>
 
+        <h2>Findings</h2>
+        <img src="../img/projects/shades/age.png" width="50%" height="auto">
+        <img src="../img/projects/shades/gender-ratio.png" width="50%" height="auto">
+        <img src="../img/projects/shades/news-consumption.png" width="50%" height="auto">
+        <img src="../img/projects/shades/verssion.png" width="50%" height="auto">
+        <p>
+            Most users liked the app and could see themselves using occasionally but it created a weird delimma as those who don't use social media did not feel the app was for them and for those for who do use social media felt that the app was not impressive enough for them to use it everyday.
+        </p>
         <div id="socials">
             <p>Feel free to check out my presentation here :&#41</p>
             <a href="https://www.canva.com/design/DAGXNVFNpZA/UVAFhPpnE23Tw0TBMW1DQg/edit?utm_content=DAGXNVFNpZA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"><img src="../img/social media/canva.png" width="10%" height="auto"></a>
