--- a/pages/shades-ux-studies.html
+++ b/pages/shades-ux-studies.html
@@ -94,6 +94,16 @@
         <p>
             Most users liked the app and could see themselves using occasionally but it created a weird delimma as those who don't use social media did not feel the app was for them and for those for who do use social media felt that the app was not impressive enough for them to use it everyday.
         </p>
+
+        <p>Some of the user suggestions are listed below:
+            <ul>
+                <li>“Less visually busy, sources more visible, I would like to know about the app's integrity and what it does to fact check/be honest about its bias.”</li>
+
+                <li>“Maybe more customization, such as different background color themes. also whenever I refreshed, it wasn’t giving me new stories at the top.”</li>
+                    
+                <li>“The Icons and the amount of screen space that is being clutter with unnecessary things could be considered. There are UI components that seem unnecessary and can be made simpler.”</li>
+            </ul>
+        </p>
         <div id="socials">
             <p>Feel free to check out my presentation here :&#41</p>
             <a href="https://www.canva.com/design/DAGXNVFNpZA/UVAFhPpnE23Tw0TBMW1DQg/edit?utm_content=DAGXNVFNpZA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"><img src="../img/social media/canva.png" width="10%" height="auto"></a>
