changed everything to lowercase

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div id="intro">
         <img src="img/me2.jpg" alt="me" width="40%">
-        <p>Hi, I am Vaibhavy, pronounced as ve-bh-ve and I like to design and code immersive media including websites, games and hardware projects.</p>
+        <p>hi, I am Vaibhavy, pronounced as ve-bh-ve and I like to design and code immersive media including websites, games and hardware projects.</p>
     </div>
 
     <div id="featured-projects-title">
@@ -36,7 +36,7 @@
     </div>
 
     <div class="featured-projects">
-        <h2>Journal Miniapp</h2>
+        <h2>journal miniapp</h2>
         <div class="tags">
             <ul>
                 <li>open source</li>
@@ -55,7 +55,7 @@
     </div>
 
     <div class="featured-projects">
-        <h2>Shades: UX studies</h2>
+        <h2>shades: ux studies</h2>
         <div class="tags">
             <ul>
                 <li>ux testing</li>
@@ -73,7 +73,7 @@
     </div>
 
     <div class="featured-projects">
-        <h2>ContentTattva: UI redesigned</h2>
+        <h2>content tattva: ui redesigned</h2>
         <div class="tags">
             <ul>
                 <li>figma</li>
@@ -95,7 +95,7 @@
     </div>
 
     <footer>
-        Made with love, <a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/social media/linked in.png" alt="linkedin" width="50px" height="auto"></a>,
+        made with love, <a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/social media/linked in.png" alt="linkedin" width="50px" height="auto"></a>,
         <a href="https://github.com/vaibhavyxx"><img src="img/social media/github.png" alt="github" width="50px" height="auto"></a>
     </footer>
 </body>
