--- a/pages/seam-hackathon.html
+++ b/pages/seam-hackathon.html
@@ -30,7 +30,8 @@
     <article id="story">
         <h1>how i made journal app in 12 hours?</h1>
         <h3>it was last august and i wanted to do seam mini-app hackathon</h3>
-        <img src="">
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/_BdUbzml1x4?si=9gIXqMhnS81vstuy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>
         I have always loved hackathons, as they force me to get things done. However, I didn’t think I would be able to finish this hackathon as I didn’t know how to code in TypeScript or React. 
         Granted, I had coded in Javascript and that was all you needed to learn typescript and react quickly.
