--- a/pages/shades-ux-studies.html
+++ b/pages/shades-ux-studies.html
@@ -47,7 +47,7 @@
             </ul>
         </p>
 
-        <h2>Methods</h2>
+        <h2>methods</h2>
         <p>During my first week of internship, I had to prepare a questionnaire and how would I get my user testers. Following is an excerpt of how I would get my testers for the app:</p>
         <ol>
             <li>Reach out to students in my classes and clubs (e.g., Political Science, Journalism) to gauge interest in news apps and ask them to try Shades.</li>
@@ -85,7 +85,7 @@
         </ul>
         </p>
 
-        <h2>Findings</h2>
+        <h2>findings</h2>
         <img src="../img/projects/shades/age.png" width="50%" height="auto">
         <img src="../img/projects/shades/gender-ratio.png" width="50%" height="auto">
         <img src="../img/projects/shades/news-consumption.png" width="50%" height="auto">
@@ -110,7 +110,7 @@
     </article>
 
     <footer>
-        Made with love, <a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/social media/linked in.png" alt="linkedin" width="50px" height="auto"></a>,
+        made with love, <a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/social media/linked in.png" alt="linkedin" width="50px" height="auto"></a>,
         <a href="https://github.com/vaibhavyxx"><img src="img/social media/github.png" alt="github" width="50px" height="auto"></a>
     </footer>
 
