made basics of my site

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     <header> 
-        <img src="icon/vd-icon.png" alt="logo" width="50px" height="50px">
         <h3>my portfolio</h3>
     </header>
 
@@ -26,7 +25,7 @@
     </div>
 
     <div id="intro">
-        <img src="img/me2.jpg" alt="me" width="40%">
+        <video src="./img/videos/teaser.mp4" alt="demo reel" width="100%" height="max-content" autoplay="true" ></video>
         <p>hi, I am Vaibhavy, pronounced as ve-bh-ve and I like to design and code immersive media including websites, games and hardware projects.</p>
     </div>
 
@@ -35,7 +34,8 @@
         <a id="more-work" href="pages/works.html"><img src="img/ui/Arrow 1.png"></a>
     </div>
 
-    <div class="featured-projects">
+    <div id="featured-projects-wrapper">
+        <div class="featured-projects">
         <h2>journal miniapp</h2>
         <div class="tags">
             <ul>
@@ -92,6 +92,7 @@
                 <button type="click" class="read-more">Read More</button>
             </form>
         </div>
+    </div>
     </div>
 
     <footer>
