Reorganized files and pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Liter&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
+    <!--<link rel="stylesheet" href="style/style.css">-->
     <title>Vaibhavy's Page</title>
 </head>
 <body>
@@ -17,82 +17,20 @@
     <div id="nav">
         <ul>
             <li><a href="index.html">home</a></li>
+            <li><a href="./pages/works.html">Projects</a></li>
             <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing">resume</a></li>
             <li><a href="https://github.com/vaibhavyxx">github</a></li>
             <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linked in</a></li>
-            <li><a href="mailto:vd5443@rit.edy">mail</a></li>
-        </ul>
     </div>
 
     <div id="intro">
-        <video src="./img/videos/teaser.mp4" alt="demo reel" width="100%" height="max-content" autoplay="true" ></video>
-        <p>hi, I am Vaibhavy, pronounced as ve-bh-ve and I like to design and code immersive media including websites, games and hardware projects.</p>
-    </div>
+        <video src="./img/videos/teaser.mp4" alt="demo reel" type="video/mp4" autoplay="true" ></video>
+        <h1>Vaibhavy</h1>
+        <h3>about</h3>
 
     <div id="featured-projects-title">
         <h1>featured projects</h1>
         <a id="more-work" href="pages/works.html"><img src="img/ui/Arrow 1.png"></a>
-    </div>
-
-    <div id="featured-projects-wrapper">
-        <div class="featured-projects">
-        <h2>journal miniapp</h2>
-        <div class="tags">
-            <ul>
-                <li>open source</li>
-                <li>web development</li>
-                <li>react</li>
-                <li>typescript</li>
-            </ul>
-            <img src="img/social media/seam-social.png" alt="seam social" width="30%" height="auto">
-            <p>
-                I made it for a hackathon to make a mini game that allows users to add their drawings and emojis to show their highlight of their day. 
-            </p>
-            <form action="pages/seam-hackathon.html">
-                <button type="click" class="read-more" >Read More</button>
-            </form>
-        </div>
-    </div>
-
-    <div class="featured-projects">
-        <h2>shades: ux studies</h2>
-        <div class="tags">
-            <ul>
-                <li>ux testing</li>
-                <li>ux writing</li>
-                <li>communication</li>
-                <li>usablity testing</li>
-                <li>mindmapping</li>
-            </ul>
-            <img src="img/projects/shades.png" alt="Shades: News App" width="30%" height="auto">
-            <p>I did it for my 12 week long internship to analyse app’s performance and features and write all my findings to share it with my supervisors.</p>
-            <form action="pages/shades-ux-studies.html">
-                <button type="click" class="read-more">Read More</button>
-            </form>
-        </div>
-    </div>
-
-    <div class="featured-projects">
-        <h2>content tattva: ui redesigned</h2>
-        <div class="tags">
-            <ul>
-                <li>figma</li>
-                <li>wireframing</li>
-                <li>sitemap</li>
-                <li>branding</li>
-                <li>collaboration</li>
-                <li>design</li>
-                <li>wordpress</li>
-            </ul>
-            <img src="img/projects/ct logo.png" alt="letters c and t combined to make a happy face" width="30%" height="auto">
-            <p>
-                I had freelanced for a startup in India to redesign their brand identity to make it match it more with their current line of work. As a result, I had come up with new colors, fonts and logos.
-            </p>
-            <form action="pages/content-tattva.html">
-                <button type="click" class="read-more">Read More</button>
-            </form>
-        </div>
-    </div>
     </div>
 
     <footer>
@@ -100,5 +38,4 @@
         <a href="https://github.com/vaibhavyxx"><img src="img/social media/github.png" alt="github" width="50px" height="auto"></a>
     </footer>
 </body>
-<script src="src/main.js"></script>
 </html>
