--- a/pages/works.html
+++ b/pages/works.html
@@ -6,6 +6,26 @@
     <title>Works</title>
 </head>
 <body>
-    
+     <nav>
+        <ul>
+            <li><a href="index.html">home</a></li>
+            <li><a href="./pages/works.html">Projects</a></li>
+            <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing">resume</a></li>
+            <li><a href="https://github.com/vaibhavyxx">github</a></li>
+            <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linked in</a></li>
+        </nav>
+    <header>
+        <h1>Personal Works</h1>
+    </header>
+
+    <section>
+        <img src="../img/projects/shades.png">
+        <p>UX Research</p>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+    </section>
+
 </body>
 </html>
