laid out changes

--- a/pages/works.html
+++ b/pages/works.html
@@ -18,14 +18,108 @@
         <h1>Personal Works</h1>
     </header>
 
+    <section> 
+        <h2>Immersive Experiences</h2>
     <section>
         <img src="../img/projects/shades.png">
-        <p>UX Research</p>
-        <p></p>
+        <p>Tejay Interactive Music Experience</p>
+        <p>Open world unity simulation where users can interact with the environment.</p>
         <ul>
-            <li></li>
+            <li>Unity</li>
+            <li>Version Control</li>
+            <li>C#</li>
         </ul>
     </section>
 
+    <section>
+        <img src="../img/projects/shades.png">
+        <p>Ritchie AR</p>
+        <p>Augmented reality experience for RIT's brick city homecoming where users can click pictures with virtual Ritchie. It has gathered 1.5k+ views with total time spent on it being 26 minutes.</p>
+        <ul>
+            <li>Zapworks</li>
+            <li>Low Code Tool</li>
+            <li>Augmented Reality</li>
+        </ul>
+    </section>
+
+     <section>
+        <img src="../img/projects/shades.png">
+        <p>Web Shooters</p>
+        <p>Developed an arduino console to 'web' spider-man in a game, made with Unity.</p>
+        <ul>
+            <li>Unity</li>
+            <li>Arduino</li>
+            <li>Game Art</li>
+            <li>C#</li>
+        </ul>
+    </section>
+</section>
+
+<section>
+    <h2>Web Development</h2>
+
+    <section>
+        <img src="../img/projects/">
+        <p>Journal Miniapp</p>
+        <p>Typescript mini-app, published on Google PlayStore and Appstore as a part of in-game library.</p>
+        <ul>
+            <li>Typescript</li>
+            <li>Rect</li>
+        </ul>
+    </section>
+
+    <section>
+        <img src="../img/projects/">
+        <p>Two Worlds</p>
+        <p>Javascript project that uses Craig Reynold's flocking idea</p>
+        <ul>
+            <li>Javascript</li>
+            <li>p5</li>
+            <li>Vectors</li>
+            <li>NPC</li>
+            <li>simulation</li>
+        </ul>
+    </section>
+
+    <section>
+        <img src="../img/projects/">
+        <p>Rick and Morty Search Engine</p>
+        <p>A search engine that uses rick and morty rest api to find the show's characters.</p>
+        <ul>
+            <li>Javascript</li>
+            <li>REST API</li>
+            <li>Figma</li>
+            <li>Color Theory</li>
+            <li>User Studies</li>
+        </ul>
+    </section>
+</section>
+
+<section>
+    <h2>UI/UX</h2>
+
+     <section>
+        <img src="../img/projects/">
+        <p>Shades: UX Studies</p>
+        <p>Researched on the app's user experience by interviewing college students and documenting their feedback.</p>
+        <ul>
+            <li>UX Studies</li>
+            <li>Documentation</li>
+        </ul>
+    </section>
+
+     <section>
+        <img src="../img/projects/">
+        <p>Content Tattva</p>
+        <p>Researched on the app's user experience by interviewing college students and documenting their feedback.</p>
+        <ul>
+            <li>UX Studies</li>
+            <li>UI Design</li>
+            <li>Brand identity</li>
+            <li>Figma</li>
+            <li>Color Theory</li>
+        </ul>
+    </section>
+</section>
 </body>
 </html>
